<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
      
  <modelVersion>4.0.0</modelVersion>      
  <groupId>fr.sparna.rdf.shacl</groupId>      
  <artifactId>shacl-play-root-pom</artifactId>      
  <version>0.8.1</version>      
  <packaging>pom</packaging>
      
  <!-- https://maven.apache.org/pom.html#distribution-management-->
      
  <distributionManagement>    		
    <repository>      		  
      <id>github</id>      		  
      <name>GitHub Packages</name>      		  
      <url>https://maven.pkg.github.com/sparna-git/shacl-play</url>               
    </repository>    	
  </distributionManagement>  	
    
  <name>SHACL-Play root pom</name>
      
  <modules>
    <module>shacl-commons</module> 
    <module>shacl-diagram</module>            
    <module>shacl-doc</module>            
    <module>shacl-validator</module>            
    <module>shacl-printer</module>            
    <module>shacl-sparql-query-gen</module>            
    <module>shacl-generate</module>            
    <module>shacl-play-app</module>            
    <module>shacl-play</module>               
  </modules>
      
  <properties>            
    <!-- library versions -->            
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>            
    <java.version>11</java.version>            
    <jena.version>4.6.1</jena.version>
    <jtwig.version>5.87.0.RELEASE</jtwig.version>            
    <jackson.version>2.13.3</jackson.version>        
  </properties>
      
  <build>            
    <plugins>  
      <plugin>                        
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-eclipse-plugin</artifactId>
        <configuration>
          <additionalConfig>                                    
            <file>                                          
              <name>.settings/org.eclipse.core.resources.prefs</name>
              <content><![CDATA[
encoding/<project>=${project.build.sourceEncoding}
eclipse.preferences.version=1
    ]]></content>
            </file>            
          </additionalConfig>                          
        </configuration>                    
      </plugin>                  
            
      <!--
            <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.3.2</version>
			</plugin>
			-->              
    </plugins> 
  </build>

  <repositories>
    <!-- Jitpack for cross-project dependencies -->
    <repository>
        <id>jitpack.io</id>
        <url>https://jitpack.io</url>
    </repository>
  </repositories>
      
  <dependencyManagement>            
    <dependencies>
                  
      <!-- for command-line parsing -->                  
      <dependency>                        
        <groupId>com.beust</groupId>                        
        <artifactId>jcommander</artifactId>                        
        <version>1.72</version>                    
      </dependency>
                  
      <dependency>                      
        <groupId>info.picocli</groupId>                      
        <artifactId>picocli</artifactId>                      
        <version>4.5.1</version>                    
      </dependency>
                  
      <!-- Jena -->                  
      <dependency>                        
        <groupId>org.apache.jena</groupId>                        
        <artifactId>jena-core</artifactId>                        
        <version>${jena.version}</version>                    
      </dependency>
                  
      <dependency>                        
        <groupId>org.apache.jena</groupId>                        
        <artifactId>jena-arq</artifactId>                        
        <version>${jena.version}</version>                    
      </dependency>
                  
      <dependency>                        
        <groupId>org.apache.jena</groupId>                        
        <artifactId>jena-shacl</artifactId>                        
        <version>${jena.version}</version>                    
      </dependency>
                  
      <!-- logging -->
                  
      <dependency>                        
        <groupId>org.slf4j</groupId>                        
        <artifactId>slf4j-api</artifactId>                        
        <version>1.7.36</version>                    
      </dependency>
                  
      <dependency>                        
        <groupId>ch.qos.logback</groupId>                        
        <artifactId>logback-classic</artifactId>                        
        <version>1.2.3</version>                    
      </dependency>
                  
      <dependency>                        
        <groupId>commons-io</groupId>                        
        <artifactId>commons-io</artifactId>                        
        <version>2.13.0</version>                    
      </dependency>
                  
            
      <!-- Testing: JUnit -->
                  
      <dependency>                        
        <groupId>junit</groupId>                        
        <artifactId>junit</artifactId>                        
        <version>4.13</version>                        
        <scope>test</scope>                    
      </dependency>
                  
      <dependency>                      
        <groupId>org.xmlunit</groupId>                      
        <artifactId>xmlunit-core</artifactId>                      
        <version>2.6.2</version>                      
        <!-- Note : we need this for runtime, too -->                      
        <!-- <scope>test</scope> -->                    
      </dependency>
                  
      <dependency>                        
        <groupId>org.xmlunit</groupId>                        
        <artifactId>xmlunit-matchers</artifactId>                        
        <version>2.6.2</version>                    
      </dependency>
                  
      <!-- SHACL -->                  
      <dependency>                        
        <groupId>org.topbraid</groupId>                        
        <artifactId>shacl</artifactId>                        
        <version>1.4.3</version>                        
        <exclusions>                              
          <exclusion>                                    
            <groupId>org.apache.jena</groupId>                                
          </exclusion>                          
        </exclusions>                    
      </dependency>
                  
      <!-- Fremarker -->                  
      <dependency>                        
        <groupId>org.freemarker</groupId>                        
        <artifactId>freemarker</artifactId>                        
        <version>2.3.30</version>                    
      </dependency>
                  
      <!-- PlantUML -->                  
      <dependency>                      
        <groupId>net.sourceforge.plantuml</groupId>                      
        <artifactId>plantuml</artifactId>                      
        <version>1.2024.4</version>                    
      </dependency>
                  
      <!-- Jackson -->                  
      <dependency>                        
        <groupId>com.fasterxml.jackson.core</groupId>                        
        <artifactId>jackson-core</artifactId>                        
        <version>${jackson.version}</version>                    
      </dependency>
                  
      <dependency>                        
        <groupId>com.fasterxml.jackson.core</groupId>                        
        <artifactId>jackson-databind</artifactId>                        
        <version>${jackson.version}</version>                    
      </dependency>
                  
      <dependency>                        
        <groupId>com.fasterxml.jackson.dataformat</groupId>                        
        <artifactId>jackson-dataformat-xml</artifactId>                        
        <version>${jackson.version}</version>                    
      </dependency>
                  
      <!-- Saxon -->                  
      <dependency>                      
        <groupId>net.sf.saxon</groupId>                      
        <artifactId>Saxon-HE</artifactId>                      
        <version>10.3</version>                    
      </dependency>

      <!-- Markdown parsing-->
      <dependency>
          <groupId>org.commonmark</groupId>
          <artifactId>commonmark</artifactId>
          <version>0.24.0</version>
      </dependency>
      <dependency>
          <groupId>org.commonmark</groupId>
          <artifactId>commonmark-ext-image-attributes</artifactId>
          <version>0.24.0</version>
      </dependency>
      <dependency>
          <groupId>org.commonmark</groupId>
          <artifactId>commonmark-ext-autolink</artifactId>
          <version>0.24.0</version>
      </dependency>

      <!-- rdf2xls for Excel serialization -->
      <dependency>
          <groupId>com.github.sparna-git.rdf2xls</groupId>
          <artifactId>rdf2xls-lib</artifactId>
          <version>1.0.0</version>
      </dependency>
              
    </dependencies>
        
  </dependencyManagement>
  
</project>
